--- a/src/input.css
+++ b/src/input.css
@@ -109,6 +109,6 @@
     text-decoration: underline;
     font-size: 12px;
     padding-bottom: 5px;
-    @apply lg:text-[14px];
+    @apply lg:text-[14px] md:text-[14px];
   }
 }
